154912080 : The font colour is configurable in the theme-styles.css, but changing it does not affect some of the pages

--- a/src/app/shared/branch-open-hours/branch-open-hours-tmpl.html
+++ b/src/app/shared/branch-open-hours/branch-open-hours-tmpl.html
@@ -1,4 +1,4 @@
-<div class="open-hours">
+<div class="open-hours custom text-color">
 <div class="heading1">
   {{ 'open_hours.heading1' | translate }}
 </div>
