--- a/src/app/shared/branch-open-hours/item/open-hour-item-tmpl.html
+++ b/src/app/shared/branch-open-hours/item/open-hour-item-tmpl.html
@@ -1,3 +1,3 @@
-    <div class="cell_day custom text-color"> {{ day }}</div>
+    <div class="cell_day custom text-color"> {{ day | translate }}</div>
     <div class="seperator"></div>
     <div [ngClass]="{'cell_hours-rtl': isRtl, 'cell_hours': !isRtl}" class="custom text-color">{{ fromAndTo }}</div>
