--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -15,7 +15,7 @@
       </svg>
     </button>
   </div>
-  <div class="privacy-policy-description">
-    {{'pricacy_policy.description' | translate  }}
+  <div class="privacy-policy-description" id="privacy-content">
+    <!-- {{'pricacy_policy.description' | translate  }} -->
   </div>
 </div>
