MOB-138: privacy policy external link improvements

--- a/src/app/customer-data/cutomer-phone/cutomer-phone.component.html
+++ b/src/app/customer-data/cutomer-phone/cutomer-phone.component.html
@@ -106,8 +106,8 @@
           </svg>
         </div>
         <div>
-          {{'customer_info.agreeDescription' | translate}} <a class="privacy-policy-link"
-            (click)="privacyLinkButtonPressed()"> {{'customer_info.privacyPolicy' | translate}} </a>
+          {{'customer_info.agreeDescription' | translate}} <span class="privacy-policy-link" id="privacy_element"
+            (click)="privacyLinkButtonPressed()"> {{'customer_info.privacyPolicy' | translate}} </span>
         </div>
       </div>
       <div class="btn-understood-container">
