MOB-174: Give more attraction to phone number text and button

--- a/src/app/customer-data/customer-data.component.css
+++ b/src/app/customer-data/customer-data.component.css
@@ -20,3 +20,10 @@
 .selected-service-name {
     font-size: 24px;
 }
+.skip-button{
+    background: none;
+}
+.skip-button:hover {
+    background: rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
