--- a/src/app/customer-data/customer-data.component.html
+++ b/src/app/customer-data/customer-data.component.html
@@ -25,7 +25,7 @@
 <div class="table-child-footer" [hidden]="showNetWorkError">
   <footer class="qm-footer">
     <div class="center-text">
-      <div class="accent-btn custom accent-bg-color btn-text-color" (click)='createVisit()'>
+      <div class="accent-btn  btn-text-color skip-button" (click)='createVisit()'>
         {{ 'customer_info.skipAndGetInLine' | translate }}
       </div>
     </div>
