--- a/src/app/customer-data/cutomer-phone/cutomer-phone.component.html
+++ b/src/app/customer-data/cutomer-phone/cutomer-phone.component.html
@@ -17,7 +17,9 @@
           {{'customer_info.editPhoneNumber' | translate}}
         </div>
         <input class="phone-num-input" type="text" placeholder="  {{'customer_info.phone_placeholder' | translate}}" [(ngModel)]="phoneNumber"
-          (change)="onPhoneNumberChanged()" (keyup.enter) = "phoneNumContinue()" (focusin) = "phoneNumberFeildFocused()" (focusout) = "phoneNumberFeildUnfocused()" *ngIf="phoneSectionState === phoneSectionStates.INITIAL">
+          (change)="onPhoneNumberChanged()" (keyup.enter) = "phoneNumContinue()" (focusin) = "phoneNumberFeildFocused()" 
+          (focusout) = "phoneNumberFeildUnfocused()" (keyup)="onPhoneNumberEnter($event)"
+          *ngIf="phoneSectionState === phoneSectionStates.INITIAL">
         <div class="phone-num-display" *ngIf="phoneSectionState === phoneSectionStates.EDIT_PHONE"> {{phoneNumber}}
         </div>
         <div class="phone-num-error" *ngIf="phoneNumberError"> {{'customer_info.phoneNumberError' | translate}}</div>
