MOB-195: Cookie consent feature added

--- a/src/app/shared/frame-layout/frame-layout.component.html
+++ b/src/app/shared/frame-layout/frame-layout.component.html
@@ -1,4 +1,7 @@
 <div class="bg full-with">
+  <div class="qm-cookie-container">
+    <app-cookie-consent-dialog></app-cookie-consent-dialog>
+  </div>
   <div class="frame custom logo-bg-color parent-center">
     <img class="logo custom logo-image child-center"/>
   </div>
