--- a/src/app/cookie-container/cookie-consent-dialog/cookie-consent-dialog.component.html
+++ b/src/app/cookie-container/cookie-consent-dialog/cookie-consent-dialog.component.html
@@ -2,7 +2,7 @@
   <div class="cookies-container">
     <div class="flex-container">
       <div class="cookie-icon">
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="36" height="36"
+        <!-- <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="36" height="36"
           viewBox="0 0 90 90">
           <defs>
             <path id="b"
@@ -11,7 +11,7 @@
           <g fill="none" fill-rule="evenodd">
             <use fill="#000" fill-opacity=".82" xlink:href="#a" />
           </g>
-        </svg>
+        </svg> -->
       </div>
       <div class="cookie-description">
         {{'cookie_consent.title' | translate  }}
