--- a/src/app/shared/not-support/not-support.component.html
+++ b/src/app/shared/not-support/not-support.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-xs-12 col-xxs">
         <div class="center-text sub-heading-text-2 custom text-color">
-            <span *ngIf="browserName && browserName.length > 0">{{ 'support.not_support_p1' | translate }}{{browserName}}{{ browserName === 'Windows Safari' ? ('support.not_support_p2_extend' | translate) : ('support.not_support_p2' | translate) }}</span>
+            <span *ngIf="browserName && browserName.length > 0">{{ 'support.not_support_p1' | translate }}{{browserName}}{{ isApplePlatform ? ('support.not_support_p2' | translate) : ('support.not_support_p2_extend' | translate) }}</span>
             <div *ngIf="!browserName" class="details">
                 <span class="info-header">{{ 'ticketInfo.ticketEndHeading' | translate }}</span>
                 <span class="info-text">{{ 'support.not_support_create_ticket' | translate }}</span>
