MOB-192: Review Definition of Done for MT

--- a/src/app/shared/confirm-dialog/confirm-dialog.component.css
+++ b/src/app/shared/confirm-dialog/confirm-dialog.component.css
@@ -1,3 +1,7 @@
+* { 
+  -ms-overflow-style: none; /* edge */
+  scrollbar-width: none /* firefox */
+}
 .dialog-container {
   position: fixed;
   top: 0;
@@ -29,6 +33,7 @@
 #cancelBtn, #okBtn{
   width: calc((280px / 2) - 0.5px);
   background-color: transparent;
+  cursor: pointer;
 }
 
 #okBtn{
