--- a/src/app/shared/frame-layout/frame-layout.component.html
+++ b/src/app/shared/frame-layout/frame-layout.component.html
@@ -3,7 +3,7 @@
     <app-cookie-consent-dialog></app-cookie-consent-dialog>
   </div>
   <div class="frame custom logo-bg-color parent-center">
-    <img class="logo custom logo-image child-center"/>
+    <img src="/app/resources/qmLogo.png" class="logo custom logo-image child-center"/>
   </div>
   <div [hidden]="!isBrowserSupport">
     <ng-content></ng-content>
