--- a/src/app/cookie-container/cookie-consent-dialog/cookie-consent-dialog.component.css
+++ b/src/app/cookie-container/cookie-consent-dialog/cookie-consent-dialog.component.css
@@ -17,6 +17,9 @@
     text-align: left;
     margin: 0 10px;
 }
+.cookie-description .custom{
+    cursor: pointer;
+}
 .cookie-icon {
     display: flex;
     flex-direction: column;
