--- a/src/app/service/list-container/services-container.css
+++ b/src/app/service/list-container/services-container.css
@@ -1,3 +1,8 @@
+* { 
+  -ms-overflow-style: none; /* edge */
+  scrollbar-width: none /* firefox */
+}
+
 .service-list-container {
   margin-bottom: 2em;
 }
