--- a/src/app/ticket-info/ticket/ticket.component.css
+++ b/src/app/ticket-info/ticket/ticket.component.css
@@ -10,6 +10,12 @@
   margin-bottom: 1em;
 }
 
+@-moz-document url-prefix() {
+  .ticket_container {
+    padding-top: 60px;
+  }
+}
+
 .ticket_nmbr {
   line-height: 100%;
   margin-bottom: 10px;
